crates/query-engine/translation/tests/snapshots/tests__it_aggregate_count_albums.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  JSON_OBJECT(
    'aggregates',
    ARRAY_AGG(aggregates_6) [SAFE_OFFSET(0)],
    'rows',
    ARRAY_AGG(rows_4)
  ) AS `universe`
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          albums_0.`Title` AS `Title`
        FROM
          test_project.test_dataset.albums AS albums_0
        LIMIT
          5 OFFSET 3
      ) AS rows_inner_5
  ) AS rows_4
  CROSS JOIN (
    SELECT
      *
    FROM
      (
        SELECT
          COUNT(*) AS `how_many_albums`
        FROM
          (
            SELECT
              albums_1.*
            FROM
              test_project.test_dataset.albums AS albums_1
            LIMIT
              5 OFFSET 3
          ) AS albums_2
      ) AS aggregates_6
  ) AS aggregates_6

[]

