crates/query-engine/translation/tests/snapshots/tests__it_aggregate_function_albums.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  JSON_OBJECT('aggregates', aggregates_6) AS `universe`
FROM
  (
    SELECT
      max(albums_2.`ArtistId`) AS `max_artist_id`
    FROM
      (
        SELECT
          albums_1.*
        FROM
          test_project.test_dataset.albums AS albums_1
      ) AS albums_2
  ) AS aggregates_6

[]
