crates/query-engine/translation/tests/snapshots/tests__it_select_where_not_null.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  JSON_OBJECT('rows', coalesce(ARRAY_AGG(rows_2), ARRAY [])) AS `universe`
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          albums_0.`Title` AS `Title`
        FROM
          test_project.test_dataset.albums AS albums_0
        WHERE
          NOT (albums_0.AlbumId IS NULL)
        LIMIT
          5 OFFSET 100
      ) AS rows_inner_3
  ) AS rows_2

[]
