crates/query-engine/translation/tests/snapshots/tests__it_select_where_related_exists.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  row_to_json("%6_universe") AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("%7_rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "%0_artist"."Name" AS "title",
              "%1_RELATIONSHIP_albums"."albums" AS "albums"
            FROM
              "public"."Artist" AS "%0_artist"
              LEFT OUTER JOIN LATERAL (
                SELECT
                  row_to_json("%1_RELATIONSHIP_albums") AS "albums"
                FROM
                  (
                    SELECT
                      *
                    FROM
                      (
                        SELECT
                          coalesce(json_agg(row_to_json("%3_rows")), '[]') AS "rows"
                        FROM
                          (
                            SELECT
                              "%2_album"."Title" AS "title"
                            FROM
                              "public"."Album" AS "%2_album"
                            WHERE
                              (
                                true
                                AND ("%0_artist"."ArtistId" = "%2_album"."ArtistId")
                              )
                          ) AS "%3_rows"
                      ) AS "%3_rows"
                  ) AS "%1_RELATIONSHIP_albums"
              ) AS "%1_RELATIONSHIP_albums" ON ('true')
            WHERE
              EXISTS (
                SELECT
                FROM
                  "public"."Album" AS "%5_album"
                WHERE
                  (
                    (
                      "%5_album"."Title" LIKE cast($1 as string)
                    )
                    AND ("%0_artist"."ArtistId" = "%5_album"."ArtistId")
                  )
              )
          ) AS "%7_rows"
      ) AS "%7_rows"
  ) AS "%6_universe"

[(1, String("Supernatural"))]
