crates/query-engine/translation/tests/snapshots/tests__it_select_where_string.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  JSON_OBJECT('rows', coalesce(ARRAY_AGG(rows_2), ARRAY [])) AS `universe`
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          albums_0.`AlbumId` AS `AlbumId`
        FROM
          test_project.test_dataset.albums AS albums_0
        WHERE
          (
            albums_0.Title IN (cast(@param1 as string), cast(@param2 as string))
          )
      ) AS rows_inner_3
  ) AS rows_2

[(1, String("Facelift")), (2, String("Jagged Little Pill"))]
