crates/query-engine/translation/tests/snapshots/tests__it_select_where_unrelated_exists.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  JSON_OBJECT('rows', coalesce(ARRAY_AGG(rows_3), ARRAY [])) AS `universe`
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          albums_0.`Title` AS `Title`
        FROM
          test_project.test_dataset.albums AS albums_0
        WHERE
          EXISTS (
            SELECT
              1 AS `one`
            FROM
              test_project.test_dataset.artists AS artists_1
            WHERE
              (
                (artists_1.Name = cast(@param1 as string))
                AND (albums_0.ArtistId = artists_1.ArtistId)
              )
          )
        ORDER BY
          albums_0.`AlbumId` ASC
      ) AS rows_inner_4
  ) AS rows_3

[(1, String("Aerosmith"))]
