crates/query-engine/translation/tests/snapshots/tests__it_simple_array_relationship.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  row_to_json("universe") AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "%RELATIONSHIP_0_FOR_Albums"."Albums" AS "Albums"
            FROM
              "public"."Artist" AS "Artist"
              LEFT OUTER JOIN LATERAL (
                SELECT
                  row_to_json("%RELATIONSHIP_0_FOR_Albums") AS "Albums"
                FROM
                  (
                    SELECT
                      *
                    FROM
                      (
                        SELECT
                          coalesce(json_agg(row_to_json("rows")), '[]') AS "rows"
                        FROM
                          (
                            SELECT
                              "Album"."Title" AS "title"
                            FROM
                              "public"."Album" AS "Album"
                            WHERE
                              (
                                true
                                AND ("Artist"."ArtistId" = "Album"."ArtistId")
                              )
                          ) AS "rows"
                      ) AS "rows"
                  ) AS "%RELATIONSHIP_0_FOR_Albums"
              ) AS "%RELATIONSHIP_0_FOR_Albums" ON ('true')
            LIMIT
              5
          ) AS "rows"
      ) AS "rows"
  ) AS "universe"

[]
