crates/query-engine/translation/tests/snapshots/tests__it_simple_object_relationship.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SELECT
  JSON_OBJECT('rows', ARRAY_AGG(universe_4)) AS universe
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          RELATIONSHIP_Artist_1.Artist AS Artist
        FROM
          public.Album AS Album_0
          LEFT OUTER JOIN (
            SELECT
              JSON_OBJECT('rows', ARRAY_AGG(RELATIONSHIP_Artist_1)) AS Artist
            FROM
              (
                SELECT
                  *
                FROM
                  (
                    SELECT
                      Artist_2.Name AS Name
                    FROM
                      public.Artist AS Artist_2
                    WHERE
                      (
                        true
                        AND (Album_0.ArtistId = Artist_2.ArtistId)
                      )
                  ) AS rows_3
              ) AS RELATIONSHIP_Artist_1
          ) AS RELATIONSHIP_Artist_1 ON (true)
        LIMIT
          5
      ) AS rows_5
  ) AS universe_4

[]
